--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: ItemCooldowns
 main: Rushil13579\ItemCooldowns\Main
-api: 3.0.0
-version: 1.1.0
-author: Rushil13579
+api: 4.0.0
+version: 1.2.0
+authors: [Rushil13579, fernanACM]
